[gd_scene load_steps=7 format=3 uid="uid://wncb254i154u"]

[ext_resource type="Script" path="res://src/battle_player.gd" id="1_qkpu0"]
[ext_resource type="PackedScene" uid="uid://d0qwabssdf0ke" path="res://assets/cmd_panel.tscn" id="2_35efr"]
[ext_resource type="PackedScene" uid="uid://byhwfxny4rk0j" path="res://assets/pawn.tscn" id="2_qs61v"]
[ext_resource type="PackedScene" uid="uid://cyu2u5wkc7a1k" path="res://assets/act_bar.tscn" id="3_eetbj"]

[sub_resource type="PlaneMesh" id="PlaneMesh_tb775"]
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4hwjn"]
albedo_color = Color(0.239216, 0.219608, 0.14902, 1)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_qkpu0")
player_id = "me"

[node name="Pawn" parent="." instance=ExtResource("2_qs61v")]

[node name="CmdPanel" parent="." instance=ExtResource("2_35efr")]

[node name="ActBar" parent="." instance=ExtResource("3_eetbj")]

[node name="SelectTile" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("PlaneMesh_tb775")
surface_material_override/0 = SubResource("StandardMaterial3D_4hwjn")
